# dlm-user-registration-api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  run_and_smoke_testing.sh  tests.sh
app/: config.py  main.py
app/api/: dependencies.py
app/api/routers/: auth.py  users.py
app/api/schemas/: tokens.py  users.py
app/core/: config.py  exceptions.py  security.py
app/crud/: tokens_repo.py  users_repo.py
app/db/: cursor.py
app/domain/entities/: token.py  user.py
app/domain/interfaces/: mailer.py  token_repo.py  user_repo.py
app/domain/services/: activation_dispatcher_service.py  activation_service.py  registration_service.py
app/infrastructure/db/: cursor.py  token_repo_pg.py  user_repo_pg.py
app/infrastructure/smtp/: smtp_client.py
app/migrations/: 001_init.sql
app/routers/: auth.py  users.py
app/schemas/: tokens.py  users.py
app/services/: smtp_client.py
migrations/: 001_init.up.sql
smtp-mock/: Dockerfile  main.py
tests/: test_auth.py
tests/unit/: test_activation_service.py  test_api_flow.py  test_registration_service.py  test_token_repo.py  test_user_repo.py
