[tool.poetry]
name = "fastapi-hello"
version = "0.1.0"
description = "Hello World FastAPI with Poetry + Docker"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
gunicorn = "^23.0.0"
psycopg-pool = "^3.2.6"
pydantic = {extras = ["email"], version = "^2.11.9"}
psycopg = {extras = ["binary"], version = "^3.2.10"}
email-validator = "^2.3.0"
httpx = "^0.27.0"
argon2-cffi = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = ">=0.27.0,<0.28.0"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"